Quasi mod group-forum presets now show up as Custom rather than blank on all themes. Forum permission group-forum presets now show up on Nox. Fixed levels breaking onto multiple lines in Nox.
Added the panel_perms_quasi_mod phrase.

--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -217,6 +217,9 @@
 	content: "{{index .Phrases "panel_perms_can_moderate" }}";
 	color: hsl(240,100%,20%);
 }
+.perm_preset_quasi_mod:before {
+	content: "{{index .Phrases "panel_perms_quasi_mod" }}";
+}
 .perm_preset_custom:before {
 	content: "{{index .Phrases "panel_perms_custom" }}";
 	color: hsl(0,0%,20%);
