--- a/templates/ip_search.html
+++ b/templates/ip_search.html
@@ -13,7 +13,7 @@
 		</div>
 	</div>
 	{{if .IP}}
-	<div class="rowblock rowlist bgavatars">
+	<div class="rowblock rowlist bgavatars micro_grid">
 		{{range .ItemList}}<div class="rowitem" style="background-image: url('{{.Avatar}}');">
 			<img src="{{.Avatar}}" class="bgsub" alt="{{.Name}}'s Avatar" />
 			<a class="rowTitle" href="{{.Link}}">{{.Name}}</a>
