--- a/templates/panel_word_filters.html
+++ b/templates/panel_word_filters.html
@@ -6,7 +6,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_word_filters_head"}}</h1></div>
 	</div>
-	<div id="panel_word_filters" class="colstack_item rowlist">
+	<div id="panel_word_filters" class="colstack_item rowlist micro_grid">
 		{{range .Something}}
 		<div class="rowitem panel_compactrow editable_parent">
 			<a data-field="find" data-type="text" href="/panel/settings/word-filters/edit/{{.ID}}" class="editable_block panel_upshift edit_fields filter_find">{{.Find}}</a>
