--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -25,9 +25,9 @@
 	margin-bottom: 8px;
 	margin-left: 16px;
 	padding-bottom: 12px;
-    padding-top: 12px;
+	padding-top: 12px;
 	padding-left: 8px;
-    border-bottom: 1px solid var(--element-border-color);
+	border-bottom: 1px solid var(--element-border-color);
 	border-left: none;
 	border-right: none;
 	border-top: none;
@@ -185,6 +185,19 @@
 }
 #panel_setting .formlabel {
 	display: none;
+}
+#panel_settings .panel_upshift {
+	border-bottom: 1px solid var(--element-border-color);
+	padding-bottom: 12px;
+}
+#panel_settings.rowlist.bgavatars .rowitem > a, #panel_settings.rowlist.bgavatars .rowitem > span {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+#panel_settings .to_right {
+	float: none;
+	margin-top: auto;
+	padding-top: 14px;
 }
 #panel_page_list textarea, #panel_page_edit textarea {
 	margin-top: 8px;
