--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -350,7 +350,7 @@ h2 {
 	width: 100%;
 }
 .topic_list_title_block .pre_opt:before {
-	content: "{{index .Phrases "topics_click_topics_to_select"}}";
+	content: "{{lang "topics_click_topics_to_select" . }}";
 	font-size: 17px;
 	margin-right: 20px;
 }
@@ -360,10 +360,10 @@ h2 {
 	white-space: nowrap;
 }
 .topic_list_title_block .create_topic_opt a:before {
-	content: "Create Topic";
+	content: "{{lang "quick_topic.create_topic_button" . }}";
 }
 .topic_list_title_block .mod_opt a:before {
-	content: "Moderate";
+	content: "{{lang "topic_list.moderate" . }}";
 }
 
 .filter_opt {
@@ -621,7 +621,7 @@ button, .formbutton, .panel_right_button:not(.has_inner_button) {
 	margin-top: 6px;
 }
 .topic_view_count:after {
-	content: "{{index .Phrases "topic.view_count_suffix"}}";
+	content: "{{lang "topic.view_count_suffix" . }}";
 }
 .topic_name_input {
 	width: 100%;
@@ -772,50 +772,58 @@ input[type=checkbox]:checked + label .sel {
 }
 
 .add_like:before, .remove_like:before {
-	content: "{{index .Phrases "topic.plus_one"}}";
+	content: "{{lang "topic.plus_one" . }}";
 }
 .button_container .open_edit:after, .edit_item:after {
-	content: "{{index .Phrases "topic.edit_button_text"}}";
+	content: "{{lang "topic.edit_button_text" . }}";
 }
 .delete_item:after {
-	content: "{{index .Phrases "topic.delete_button_text"}}";
+	content: "{{lang "topic.delete_button_text" . }}";
 }
 .ip_item_button:after {
-	content: "{{index .Phrases "topic.ip_button_text"}}";
+	content: "{{lang "topic.ip_button_text" . }}";
 }
 .lock_item:after {
-	content: "{{index .Phrases "topic.lock_button_text"}}";
+	content: "{{lang "topic.lock_button_text" . }}";
 }
 .unlock_item:after {
-	content: "{{index .Phrases "topic.unlock_button_text"}}";
+	content: "{{lang "topic.unlock_button_text" . }}";
 }
 .pin_item:after {
-	content: "{{index .Phrases "topic.pin_button_text"}}";
+	content: "{{lang "topic.pin_button_text" . }}";
 }
 .unpin_item:after {
-	content: "{{index .Phrases "topic.unpin_button_text"}}";
+	content: "{{lang "topic.unpin_button_text" . }}";
 }
 .report_item:after {
-	content: "{{index .Phrases "topic.report_button_text"}}";
+	content: "{{lang "topic.report_button_text" . }}";
 }
 .like_count:after {
-	content: "{{index .Phrases "topic.like_count_suffix"}}";
+	content: "{{lang "topic.like_count_suffix" . }}";
 }
 
 .topic_reply_container {
 	display: flex;
 }
 
-.rowlist.bgavatars {
+.rowlist.bgavatars, .micro_grid {
 	display: grid;
-	grid-gap: 16px;
-	grid-row-gap: 0px;
+	/*grid-gap: 16px;
+	grid-row-gap: 8px;*/
+	grid-gap: 24px;
+	grid-row-gap: 16px;
 	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
 }
-.rowlist.bgavatars .rowitem {
+.rowlist.bgavatars.micro_grid, .micro_grid {
+	grid-gap: 16px;
+	grid-row-gap: 4px;
+	grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+.rowlist.bgavatars .rowitem, .micro_grid .rowitem {
 	display: flex;
 	flex-direction: column;
-	width: 180px;
+	/*width: 180px;*/
 	background-image: none !important;
 	margin-bottom: 10px;
 	padding: 16px;
