--- a/themes/shadow/public/panel.css
+++ b/themes/shadow/public/panel.css
@@ -66,6 +66,9 @@
 	margin-bottom: 5px;
 }
 
+#panel_settings .panel_compactrow {
+	padding-left: 10px;
+}
 #panel_word_filters .itemSeparator:before {
 	content: " || ";
 	padding-left: 2px;
