Improved mobile usability for Nox in the topic list, profiles, account manager and control panel. More to come.
Fixed a bug in the template generator where fragment indices would sometimes become negative.
Forum pages are now considered to be part of /forums/ instead of /topics/ in the menu tab highlighter.
Fixed a bug in the forum page in Nox where the forum options weren't aligned to the right.
Switched out a couple of {{if ne .CurrentUser.ID 0}}s for {{if .CurrentUser.Loggedin}}s
Moved the filter opt separator into it's own DOM node for easier styling.

Added the quick_topic.create_topic_button_short phrase.
Added the topic_list.moderate_short phrase.

--- a/themes/nox/public/acc_panel_common.css
+++ b/themes/nox/public/acc_panel_common.css
@@ -38,3 +38,12 @@
 .rowmenu .rowitem {
 	margin-bottom: 4px;
 }
+
+@media (max-width: 420px) {
+	.colstack {
+		display: block;
+	}
+	.colstack_left, .colstack_right {
+		width: auto !important;
+	}
+}
