--- a/templates/forum.html
+++ b/templates/forum.html
@@ -4,13 +4,14 @@
 {{if ne .LastPage .Page}}<div id="nextFloat" class="next_button"><a class="next_link" aria-label="{{lang "paginator_next_page_aria"}}" rel="next" href="/forum/{{.Forum.ID}}?page={{add .Page 1}}">{{lang "paginator_greater_than"}}</a></div>{{end}}
 
 <main id="forumItemList" itemscope itemtype="http://schema.org/ItemList">
-	<div id="forum_head_block" class="rowblock rowhead topic_list_title_block{{if ne .CurrentUser.ID 0}} has_opt{{end}}">
+	<div id="forum_head_block" class="rowblock rowhead topic_list_title_block{{if .CurrentUser.Loggedin}} has_opt{{end}}">
 		<div class="rowitem forum_title">
 			<h1 itemprop="name">{{.Title}}</h1>
 		</div>
 		{{if .CurrentUser.Loggedin}}
 			<div class="optbox">
 				{{if .CurrentUser.Perms.CreateTopic}}
+				<div class="opt dummy_opt"></div>
 				<div class="pre_opt auto_hide"></div>
 				<div class="opt create_topic_opt" title="{{lang "topic_list.create_topic_tooltip"}}" aria-label="{{lang "topic_list.create_topic_aria"}}"><a class="create_topic_link" href="/topics/create/{{.Forum.ID}}"></a></div>
 				{{/** TODO: Add a permissions check for this **/}}
