Improved the datetimes on the log pages. Added an experimental template fragment optimisation. The template generator can handle time.Time The forum and profile templates now have guest and member variants generated for them. Interpreted templates are no longer loaded, if there's a generated version of it.
Added absolute time on hover to the topic, topics, forum, and forums templates.
We now use lang instead of index in the stylesheets for phrases.
Renamed the .trash_label CSS class to .delete_label
Use the new toArr and concat template functions to reduce the amount of boilerplate in the theme stylesheets.
Removed bits of redundant code here and there in the stylesheets.
Added a .CurrentUser.Loggedin to profiles to make them slightly faster.
Shortened some themeStmt names.
Moved GzipResponseWriter, theme.RunTmpl and theme.GetTmpl from theme_list.go to theme.go
The fallback theme now falls back onto the last theme loaded, if the fallback theme doesn't exist.
Added the abstime template function for formatting absolute times a little more nicely.

Began work on the login logs.

Removed the alerts_no_new_alerts phrase.
Renamed the forums_topics_suffix phrase to forums.topics_suffix.

--- a/templates/header.html
+++ b/templates/header.html
@@ -45,7 +45,7 @@
 	<img src="{{.CurrentUser.MicroAvatar}}" />
 	<div class="option_box">
 		<a href="{{.CurrentUser.Link}}" class="username">{{.CurrentUser.Name}}</a>
-		<span class="alerts">{{lang "alerts_no_new_alerts"}}</span>
+		<span class="alerts">{{lang "alerts.no_alerts_short"}}</span>
 	</div>
 </div>
 {{end}}
