--- a/themes/tempra-simple/public/panel.css
+++ b/themes/tempra-simple/public/panel.css
@@ -9,10 +9,10 @@
 }
 
 .edit_button:before {
-	content: "{{index .Phrases "panel_edit_button_text"}}";
+	content: "{{lang "panel_edit_button_text" . }}";
 }
 .delete_button:after {
-	content: "{{index .Phrases "panel_delete_button_text"}}";
+	content: "{{lang "panel_delete_button_text" . }}";
 }
 
 .tag-mini {
@@ -104,32 +104,32 @@
 }
 
 .perm_preset_no_access:before {
-	content: "{{index .Phrases "panel_perms_no_access" }}";
+	content: "{{lang "panel_perms_no_access" . }}";
 	color: maroon;
 }
 .perm_preset_read_only:before, .perm_preset_can_post:before {
 	color: green;
 }
 .perm_preset_read_only:before {
-	content: "{{index .Phrases "panel_perms_read_only" }}";
+	content: "{{lang "panel_perms_read_only" . }}";
 }
 .perm_preset_can_post:before {
-	content: "{{index .Phrases "panel_perms_can_post" }}";
+	content: "{{lang "panel_perms_can_post" . }}";
 }
 .perm_preset_can_moderate:before {
-	content: "{{index .Phrases "panel_perms_can_moderate" }}";
+	content: "{{lang "panel_perms_can_moderate" . }}";
 	color: darkblue;
 }
 .perm_preset_quasi_mod:before {
-	content: "{{index .Phrases "panel_perms_quasi_mod" }}";
+	content: "{{lang "panel_perms_quasi_mod" . }}";
 	color: darkblue;
 }
 .perm_preset_custom:before {
-	content: "{{index .Phrases "panel_perms_custom" }}";
+	content: "{{lang "panel_perms_custom" . }}";
 	color: black;
 }
 .perm_preset_default:before {
-	content: "{{index .Phrases "panel_perms_default" }}";
+	content: "{{lang "panel_perms_default" . }}";
 }
 
 #panel_dashboard_right .colstack_head {
