--- a/templates/panel_reglogs.html
+++ b/templates/panel_reglogs.html
@@ -13,7 +13,7 @@
 					{{if $.CurrentUser.Perms.ViewIPs}}<br /><small style="margin-left: 2px;font-size: 12px;">{{.IPAddress}}</small>{{end}}
 				</span>
 				<span class="to_right">
-					<span style="font-size: 14px;">{{.DoneAt}}</span>
+					<span style="font-size: 14px;" title="{{.DoneAt}}">{{.DoneAt}}</span>
 				</span>
 				<div style="clear: both;"></div>
 			</div>
