--- a/themes/shadow/public/panel.css
+++ b/themes/shadow/public/panel.css
@@ -31,10 +31,10 @@
 }
 
 .edit_button:before {
-	content: "{{index .Phrases "panel_edit_button_text"}}";
+	content: "{{lang "panel_edit_button_text" . }}";
 }
 .delete_button:after {
-	content: "{{index .Phrases "panel_delete_button_text"}}";
+	content: "{{lang "panel_delete_button_text" . }}";
 }
 
 #panel_forums .rowitem {
