--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -1129,6 +1129,10 @@ textarea {
 	content: "{{lang "topic.report_button_text" .}}";
 }
 
+.zone_view_topic .pageset {
+	margin-bottom: 14px;
+}
+
 #ip_search_container .rowlist .rowitem {
 	padding-top: 16px;
 	padding-bottom: 10px;
